--- a/web/templates/vps-create.html
+++ b/web/templates/vps-create.html
@@ -487,7 +487,7 @@
     <script type="module">
         import { vpsCreationWizard } from '/static/js/modules/vps-creation-wizard.js';
         
-        // Make the component available globally
+        // Make the component available globally before Alpine initializes
         window.vpsCreationWizard = vpsCreationWizard;
     </script>
 </body>
